--- a/docs/dbz/style.css
+++ b/docs/dbz/style.css
@@ -252,7 +252,7 @@ footer::after{
    1px 1px 20px 0px #f5ec17;
 }
 .fa{
-    color: #1454d5;
+    color: #ece510;
     font-size:40px;
     margin-top: 10px;
     margin-left: 14px;
