--- a/docs/pixels/screenRes.css
+++ b/docs/pixels/screenRes.css
@@ -81,9 +81,9 @@ body{
     
        width: 16rem;
        height: 11rem;
-       background-color: crimson;
+       background-color: #4a4647;
        border-radius: 0px;
-       box-shadow: 0px 31px 0px 15px #bf4c4c;
+       box-shadow: 0px 31px 0px 15px #3f3e3e;
        display: flex;
        justify-content: center;
        align-items: center;
